// Utenti del sistema
Table users {
  id int [pk, increment]
  email varchar(255) [unique, not null]
  name varchar(255) [not null]
  surname varchar(255) [not null]
  password varchar(255) [not null]
  role varchar(255) [not null, default: 'user']
  createdAt datetime [not null]
  updatedAt datetime [not null]
}

// Sessioni di autenticazione
Table sessions {
  id int [pk, increment]
  refreshToken varchar(512) [not null]
  revoked tinyint(1) [not null] // Usato come booleano
  expiresAt datetime
  userId int [not null]
  createdAt datetime [not null]
  updatedAt datetime [not null]
}

// Progetti creati dagli utenti
Table projects {
  id int [pk, increment]
  userId int [not null]
  name varchar(255) [not null]
  createdAt datetime [not null]
  updatedAt datetime [not null]
}

// Target (Domini) associati ai progetti
Table targets {
  id int [pk, increment]
  projectId int [not null]
  domain varchar(255) [not null]
  ip_domain varchar(255)
  createdAt datetime [not null]
  updatedAt datetime [not null]

  indexes {
    (projectId, domain) [unique]
  }
}

// Scansioni effettuate sui target
Table scans {
  id int [pk, increment]
  targetId int [not null]
  state enum('pending','running','done','failed','canceled','none') [not null, default: 'none']
  start_time datetime
  end_time datetime
  report_path varchar(255)
  pentest_path varchar(255)
  createdAt datetime [not null]
  updatedAt datetime [not null]
}

// Risultati delle vulnerabilità trovate
Table scan_results {
  id int [pk, increment]
  scanId int [not null]
  vulnerabilityType varchar(255) [not null]
  severity varchar(255) [not null]
  description text
  urlAffected varchar(255)
  createdAt datetime [not null]
  updatedAt datetime [not null]
}

// --- Relazioni (Foreign Keys) ---

// Un utente può avere molte sessioni
Ref: users.id < sessions.userId [delete: cascade, update: cascade]

// Un utente può avere molti progetti
Ref: users.id < projects.userId [delete: cascade, update: cascade]

// Un progetto può avere molti target
Ref: projects.id < targets.projectId [delete: cascade, update: cascade]

// Un target può avere molte scansioni
Ref: targets.id < scans.targetId [delete: cascade, update: cascade]

// Una scansione può avere molti risultati
Ref: scans.id < scan_results.scanId [delete: cascade, update: cascade]